--- a/Index.html
+++ b/Index.html
@@ -125,7 +125,7 @@ This point must also be noted that MBBS is my choice but <u>Its not the ONLY cho
 <hr>
 <div>
 <p><h4>If you are interested to know more about me, or have any oppotunities for me, kindly fill in the form provided below so that I can Contact you.</p></h4>
-<h5>FILL IN THE CONTACT DETAILS:</h5>
+<h5>FILL IN YOUR CONTACT DETAILS:</h5>
 <form action="/action.php">
 <input type="text" placeholder="Email ID">
 <br>
